@@ -2652,3 +2652,7 @@ Updated copyright year to 2022.
 
 Bumped bibmanager to version 1.4.2
 
+*****
+
+Updated pygments version requirement for tests.
+
